@@ -125,9 +125,10 @@ public class Main {
         }
         scanner.close();
 
-        return new MonteVector(seed.getFirst(), messageDigests);
+        return new MonteVector(seed.get(0), messageDigests);
     }
 
+    
     /**
      * Run the SHA3 Known Answer Tests and Monte Carlo Tests.
      * @throws FileNotFoundException if the test vector files are not found.
@@ -143,6 +144,7 @@ public class Main {
             runSHA3KAT(version.bits, parsedLong);
             runSHA3Monte(version.bits, parsedMonte);
             System.out.println();
+
         }
     }
 
@@ -252,11 +254,27 @@ public class Main {
         return results;
     }
 
+    private static void simpleSHAKETest() {
+        byte[] message = HEXF.parseHex("afc9ef4e2e46c719120b68a65aa872273d0873fc6ea353859ff6f034443005e6");
+        byte[] expected = HEXF.parseHex("45c65255731e3679b4662f55b02bc5d1c8038a1d778fe91144a5c7d3a286c78c54f5213513");
+        byte[] actual = SHA3SHAKE.SHAKE(256, message, 296, null);
+        String name = "SHAKE-" + 256 + " L=" + 0;
+        TestResult tr = new TestResult(name, actual, expected);
+        System.out.println(tr);
+
+    }
+
+    private static void testSHAKE() {
+        
+    }
+
     public static void main(String[] args) throws FileNotFoundException {
         for (int i = 0; i < args.length; i++) {
             switch (args[i]) {
                 case "test":
-                    testSHA3();
+                    //testSHA3();
+                    System.out.println("Testing SHAKE:");
+                    simpleSHAKETest();
                     break;
                 default:
                     continue;
